# chip0

./: .gitignore  .gitmodules  Cargo.toml  README.md
chip0-core/: Cargo.toml
chip0-core/src/: bus.rs  config.rs  cpu.rs  lib.rs  machine.rs  prover.rs  trace.rs
chip0-core/src/airs/: mod.rs
chip0-core/src/airs/counter/: air.rs  columns.rs
chip0-core/src/airs/is_equal/: air.rs  columns.rs
chip0-core/src/airs/is_equal_constant/: air.rs  columns.rs  mod.rs
chip0-core/src/airs/loop_counter/: air.rs  columns.rs
chip0-core/src/airs/modulo_counter/: air.rs  columns.rs
chip0-core/src/airs/selector/: air.rs  columns.rs
chip0-core/src/chips/: mod.rs
chip0-core/src/chips/clear/: air.rs  columns.rs  interaction.rs  mod.rs
chip0-core/src/chips/cpu/: air.rs  columns.rs  interaction.rs  mod.rs
chip0-core/src/chips/draw/: air.rs  columns.rs  interaction.rs  mod.rs
chip0-core/src/chips/frame_buffer/: air.rs  columns.rs  interaction.rs  mod.rs
chip0-core/src/chips/hash/: air.rs  columns.rs  interaction.rs  mod.rs
chip0-core/src/chips/keypad/: air.rs  columns.rs  interaction.rs  mod.rs
chip0-core/src/chips/memory/: air.rs  columns.rs  interaction.rs  mod.rs
chip0-core/src/chips/memory_start/: air.rs  columns.rs  interaction.rs  mod.rs
chip0-core/src/chips/range/: air.rs  columns.rs  interaction.rs  mod.rs
chip0-core/src/drivers/: prover.rs
chip0-tui/: Cargo.toml
chip0-tui/src/: args.rs  main.rs  terminal.rs
chip0-tui/src/drivers/: audio.rs  display.rs  input.rs  mod.rs  prover.rs
chip8-core/: Cargo.toml
chip8-core/src/: chip8.rs  constants.rs  error.rs  input.rs  instruction.rs  keypad.rs  lib.rs  rwlock.rs  util.rs
chip8-core/src/cpu/: mod.rs  simple.rs
chip8-core/src/drivers/: audio.rs  display.rs  input.rs  mod.rs  prover.rs
chip8-core/src/state/: mod.rs  simple.rs
machine/: Cargo.toml
machine/src/: lib.rs  machine.rs  trace.rs
machine/src/chips/: mod.rs
machine/src/chips/cpu/: air.rs  columns.rs  interaction.rs
machine/src/chips/draw/: air.rs  interaction.rs  mod.rs
machine/src/chips/frame_buffer/: columns.rs  mod.rs
machine/src/chips/hash/: interaction.rs  mod.rs
machine/src/chips/keypad/: air.rs  interaction.rs
machine/src/chips/memory/: air.rs  columns.rs
machine/src/chips/range/: air.rs  columns.rs
rom/: zkhack.ch8
rom/zkhack/: zkhack.8o
