[workspace]
members = ["chip0-core", "chip0-tui", "chip8-core"]
resolver = "2"

[workspace.dependencies]
p3-air = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-baby-bear = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-challenger = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-commit = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-dft = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-field = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-fri = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-goldilocks = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-keccak = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-keccak-air = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-matrix = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-maybe-rayon = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-mds = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-merkle-tree = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-poseidon2 = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-symmetric = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-uni-stark = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-util = { git = "https://github.com/Plonky3/Plonky3.git" }

p3-derive = { git = "https://github.com/shuklaayush/p3-utils.git" }
p3-interaction = { git = "https://github.com/shuklaayush/p3-utils.git" }
p3-stark = { git = "https://github.com/shuklaayush/p3-utils.git", features = [
    "debug-trace",
] }
p3-machine = { git = "https://github.com/shuklaayush/p3-utils.git", features = [
    "debug-trace",
] }

serde = { version = "1.0", default-features = false, features = [
    "derive",
    "alloc",
] }
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.17", features = ["std", "env-filter"] }
tracing-forest = { version = "0.1.6", features = ["ansi", "smallvec"] }
rand = { version = "0.8.5" }
