[package]
name = "chip0-core"
version = "0.1.0"
edition = "2021"

[dependencies]
p3-air = { workspace = true }
p3-baby-bear = { workspace = true }
p3-challenger = { workspace = true }
p3-commit = { workspace = true }
p3-dft = { workspace = true }
p3-field = { workspace = true }
p3-fri = { workspace = true }
p3-keccak = { workspace = true }
p3-keccak-air = { workspace = true }
p3-matrix = { workspace = true }
p3-maybe-rayon = { workspace = true }
p3-mds = { workspace = true }
p3-merkle-tree = { workspace = true }
p3-poseidon2 = { workspace = true }
p3-symmetric = { workspace = true }
p3-uni-stark = { workspace = true }
p3-util = { workspace = true }

p3-derive = { workspace = true }
p3-interaction = { workspace = true }
p3-air-util = { workspace = true }
p3-machine = { workspace = true }

serde = { workspace = true }
tracing = { workspace = true }

chip8-core = { path = "../chip8-core" }

itertools = "0.12.1"
rand = "0.8.5"
tokio = { version = "1.37.0", features = ["rt"] }
tracing-subscriber = { version = "0.3.17", features = ["std", "env-filter"] }
tracing-forest = { version = "0.1.6", features = ["ansi", "smallvec"] }
tiny-keccak = "2.0.2"

[features]
default = ["trace-writer"]
trace-writer = [
    "p3-air-util/trace-writer",
    "p3-machine/trace-writer",
    "p3-derive/trace-writer",
]
