[package]
name = "chip0-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
chip8-core = { workspace = true }

clap = { version = "4.5.4", features = ["derive"] }
crossterm = { version = "0.27.0" }
csv = { version = "1.3.0" }
eyre = { version = "0.6.12" }
rand = { version = "0.8.5" }
ratatui = { version = "0.26.2" }
serde = { version = "1.0.200", features = ["derive"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }

chip0-core = { path = "../chip0-core" }

p3-baby-bear = { workspace = true }

[[bin]]
name = "chip0"
path = "src/main.rs"
